test/algeff/wrong/ops2.kk.out
warning (line 39, column 5): using a bare operation is deprecated.
 hint: start with 'val', 'fun', 'except', or 'control' instead.
test/algeff/wrong/ops2.kk(44,11): error: invalid syntax
 unexpected '(': local parameters are no longer supported, use a local 'var' instead